# hs-gir

./: README.md  gir.cabal
Data/GIR/: Parse.hs  Types.hs
