Name:                gir
Version:             0.0.1
Description:         Gobject Introspection format GIR parsing
License:             BSD3
License-file:        LICENSE
Copyright:           Vincent Hanquez <vincent@snarc.org>
Author:              Vincent Hanquez <vincent@snarc.org>
Maintainer:          Vincent Hanquez <vincent@snarc.org>
Synopsis:            Gobject Introspection format GIR parsing
Build-Type:          Simple
Category:            Network
stability:           experimental
Cabal-Version:       >=1.6
Homepage:            http://github.com/vincenthz/hs-gir
data-files:          README.md

Library
  Build-Depends:     base >= 3 && < 5
                   , mtl
                   , xml
  Exposed-modules:   Data.GIR.Types
                     Data.GIR.Parse
  ghc-options:       -Wall

source-repository head
  type: git
  location: git://github.com/vincenthz/hs-gir
